--- a/Exercise_four_(4).ipynb
+++ b/Exercise_four_(4).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPubSMWj10by2pikab/8XLx",
+      "authorship_tag": "ABX9TyOpiikNXy5tOjIyG+yjR02d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 1,
       "metadata": {
         "id": "TQ969cqF3c3f"
       },
@@ -73,9 +73,9 @@
           "height": 412
         },
         "id": "3v_Xe2qq35Lu",
-        "outputId": "d4c91894-2940-442a-e8ca-a8a118c86c24"
+        "outputId": "30f20c62-fd67-4015-887f-010a4a5d3d04"
       },
-      "execution_count": 46,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-012a648c-da3e-4711-be3c-7e927d216491\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -339,7 +339,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-012a648c-da3e-4711-be3c-7e927d216491')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -391,12 +391,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-012a648c-da3e-4711-be3c-7e927d216491 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3');\n",
+              "        const element = document.querySelector('#df-012a648c-da3e-4711-be3c-7e927d216491');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -416,8 +416,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-15e643fc-ba3c-49ce-a5af-97723047d071\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15e643fc-ba3c-49ce-a5af-97723047d071')\"\n",
+              "    <div id=\"df-4156f5c6-007f-4a4e-b478-823e41421ee2\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4156f5c6-007f-4a4e-b478-823e41421ee2')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -536,7 +536,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-15e643fc-ba3c-49ce-a5af-97723047d071 button');\n",
+              "            document.querySelector('#df-4156f5c6-007f-4a4e-b478-823e41421ee2 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -552,7 +552,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 2
         }
       ]
     },
@@ -591,9 +591,9 @@
           "height": 1000
         },
         "id": "wlDd_khT6ARx",
-        "outputId": "0dd55c77-31bf-42dc-9efc-5c6beeb75b04"
+        "outputId": "4d42db05-2613-41f8-d271-588da34209be"
       },
-      "execution_count": 47,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -752,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1z0L8x7F85zv",
-        "outputId": "685b68c1-89e3-480c-a3d9-d2ddf48be88b"
+        "outputId": "673be902-71ba-4117-e8a0-2a5ff61d34a8"
       },
-      "execution_count": 48,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 4
         }
       ]
     },
@@ -797,9 +797,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCKXZEmZEZIk",
-        "outputId": "c5f3c2e4-5656-4350-b68c-61c0e94e5f89"
+        "outputId": "28c0b543-96d9-41f7-e1b6-eddaf75b4f62"
       },
-      "execution_count": 49,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +809,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 5
         }
       ]
     },
@@ -838,9 +838,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fOUellkhGkLV",
-        "outputId": "244be5a4-25ce-45e1-9024-6ea6915bd05c"
+        "outputId": "b35353cf-1516-4e17-f89e-62d052c3274c"
       },
-      "execution_count": 50,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YN_vUUc6MjI6",
-        "outputId": "640af2c1-671d-4ead-eea3-7acabc7901f8"
+        "outputId": "6a0ae088-05b5-4507-8513-ac4c21cb8d25"
       },
-      "execution_count": 51,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,9 +978,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ij_dBerFTN63",
-        "outputId": "514aabc9-b769-4fdf-b319-8aa8a89825b5"
+        "outputId": "3f6978e2-9d2c-491b-e509-8048eb138054"
       },
-      "execution_count": 52,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,9 +1043,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsLP98PfVbie",
-        "outputId": "1b7af66b-352a-4f29-c297-b21455dde4ad"
+        "outputId": "6f07dddb-04d5-4de7-ac80-885aa32276f2"
       },
-      "execution_count": 53,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1061,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 9
         }
       ]
     },
@@ -1073,6 +1073,55 @@
       "metadata": {
         "id": "VJp5PYkX9po-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# y_unknown_proba has two columns (one for probability to be white, and one for probability to be red)\n",
+        "# So we keep the second column, the probability to be red\n",
+        "y_unknown_proba_class1 = y_unknown_proba[:, 1]\n",
+        "\n",
+        "# Create labels with list comprehension\n",
+        "# For every 'red' probability we check the number\n",
+        "# if it is less than 0.35, we set the label \"white\"\n",
+        "# if it is more than 0.65 to set the label \"red\"\n",
+        "# otherwise we set the label \"uncertain\"\n",
+        "y_unknown_pred = [\n",
+        "    'red' if p > 0.65 else\n",
+        "    'white' if p < 0.35 else\n",
+        "    'uncertain'\n",
+        "    for p in y_unknown_proba_class1\n",
+        "]\n",
+        "\n",
+        "# Print results\n",
+        "print(\"Predicted labels for x_unknown:\\n\")\n",
+        "print(np.array(y_unknown_pred).reshape(-1, 1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U0_UqVq907x9",
+        "outputId": "f2e4d4e6-c52b-4313-a54a-a4112b5e1b39"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted labels for x_unknown:\n",
+            "\n",
+            "[['white']\n",
+            " ['white']\n",
+            " ['white']\n",
+            " ...\n",
+            " ['red']\n",
+            " ['red']\n",
+            " ['red']]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
