--- a/Exercise_four_(4).ipynb
+++ b/Exercise_four_(4).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpiikNXy5tOjIyG+yjR02d",
+      "authorship_tag": "ABX9TyM1hOJcKc222iLBKezNNexr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 41,
       "metadata": {
         "id": "TQ969cqF3c3f"
       },
@@ -73,9 +73,9 @@
           "height": 412
         },
         "id": "3v_Xe2qq35Lu",
-        "outputId": "30f20c62-fd67-4015-887f-010a4a5d3d04"
+        "outputId": "650fd110-477f-4f08-beef-dfef8413dca4"
       },
-      "execution_count": 2,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-012a648c-da3e-4711-be3c-7e927d216491\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3474727b-cad2-4a27-b695-d650e03d23e2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -339,7 +339,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-012a648c-da3e-4711-be3c-7e927d216491')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3474727b-cad2-4a27-b695-d650e03d23e2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -391,12 +391,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-012a648c-da3e-4711-be3c-7e927d216491 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3474727b-cad2-4a27-b695-d650e03d23e2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-012a648c-da3e-4711-be3c-7e927d216491');\n",
+              "        const element = document.querySelector('#df-3474727b-cad2-4a27-b695-d650e03d23e2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -416,8 +416,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-4156f5c6-007f-4a4e-b478-823e41421ee2\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4156f5c6-007f-4a4e-b478-823e41421ee2')\"\n",
+              "    <div id=\"df-09548d3f-b86a-446f-ba22-220f40c7c35d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-09548d3f-b86a-446f-ba22-220f40c7c35d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -536,7 +536,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4156f5c6-007f-4a4e-b478-823e41421ee2 button');\n",
+              "            document.querySelector('#df-09548d3f-b86a-446f-ba22-220f40c7c35d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -552,7 +552,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 42
         }
       ]
     },
@@ -591,9 +591,9 @@
           "height": 1000
         },
         "id": "wlDd_khT6ARx",
-        "outputId": "4d42db05-2613-41f8-d271-588da34209be"
+        "outputId": "a6373f5b-bb90-47b6-9e6f-294819b3574c"
       },
-      "execution_count": 3,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -752,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1z0L8x7F85zv",
-        "outputId": "673be902-71ba-4117-e8a0-2a5ff61d34a8"
+        "outputId": "c42dea8d-db45-4934-da36-aa11012eb0e7"
       },
-      "execution_count": 4,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 44
         }
       ]
     },
@@ -797,9 +797,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCKXZEmZEZIk",
-        "outputId": "28c0b543-96d9-41f7-e1b6-eddaf75b4f62"
+        "outputId": "dbdfc497-3ec9-4b58-b257-8dcc108c7bd7"
       },
-      "execution_count": 5,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +809,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 45
         }
       ]
     },
@@ -838,9 +838,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fOUellkhGkLV",
-        "outputId": "b35353cf-1516-4e17-f89e-62d052c3274c"
+        "outputId": "1fee527e-c462-4943-eb77-1774d7ed0c2e"
       },
-      "execution_count": 6,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YN_vUUc6MjI6",
-        "outputId": "6a0ae088-05b5-4507-8513-ac4c21cb8d25"
+        "outputId": "9d74b9ea-e58b-4871-feee-277eb57a90d9"
       },
-      "execution_count": 7,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,19 +958,19 @@
         "y_pred_test = rf_classifier_balanced.predict(x_test)\n",
         "\n",
         "# Calculate train desired scores\n",
-        "train_desired_scores = calculate_scores(y_train, y_pred_train)\n",
+        "balanced_train_desired_scores = calculate_scores(y_train, y_pred_train)\n",
         "\n",
         "# Calculate test desired scores\n",
-        "test_desired_scores = calculate_scores(y_test, y_pred_test)\n",
+        "balanced_test_desired_scores = calculate_scores(y_test, y_pred_test)\n",
         "\n",
         "# Print results (Train)\n",
         "print(\"Train scores:\\n\")\n",
-        "for metric, value in train_desired_scores.items():\n",
+        "for metric, value in balanced_train_desired_scores.items():\n",
         "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n",
         "\n",
         "# Print results (Test)\n",
         "print(\"\\nTest scores:\\n\")\n",
-        "for metric, value in test_desired_scores.items():\n",
+        "for metric, value in balanced_test_desired_scores.items():\n",
         "    print(f\"{metric.capitalize()} score: {value:.4f}\")"
       ],
       "metadata": {
@@ -978,9 +978,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ij_dBerFTN63",
-        "outputId": "3f6978e2-9d2c-491b-e509-8048eb138054"
+        "outputId": "54f16fb2-2f6c-4106-d611-e43767b79811"
       },
-      "execution_count": 8,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,9 +1043,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsLP98PfVbie",
-        "outputId": "6f07dddb-04d5-4de7-ac80-885aa32276f2"
+        "outputId": "72ef60ba-6409-4bd1-e8d0-1900be624a39"
       },
-      "execution_count": 9,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1061,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 49
         }
       ]
     },
@@ -1102,9 +1102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U0_UqVq907x9",
-        "outputId": "f2e4d4e6-c52b-4313-a54a-a4112b5e1b39"
+        "outputId": "53806f9d-a4cf-4a53-dbc4-445ae8acbd2f"
       },
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,6 +1133,95 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Select predictions with values red and white\n",
+        "mask_certain = np.isin(y_unknown_pred, ['red', 'white'])\n",
+        "x_updated = x_unknown[mask_certain] # Keep data that have labels red or white\n",
+        "y_new_labels = np.array(y_unknown_pred)[mask_certain] # y new labels will only have red and white now (not unknown)\n",
+        "\n",
+        "# Convert red and white to 0 and 1 respectively\n",
+        "y_updated = np.where(y_new_labels == \"red\", 1, 0)\n",
+        "\n",
+        "# Concatenate with initial train set\n",
+        "x_train_extended = np.concatenate([x_train, x_updated])\n",
+        "y_train_extended = np.concatenate([y_train, y_updated])\n",
+        "\n",
+        "print(f\"Sample added: {len(y_new_labels)}\\n\")\n",
+        "print(\"Previous training set shapes:\\n\")\n",
+        "print(f\"x_train_extended: {x_train.shape}\")\n",
+        "print(f\"y_train_extended: {y_train.shape}\\n\")\n",
+        "print(\"New training set shapes:\\n\")\n",
+        "print(f\"x_train_extended: {x_train_extended.shape}\")\n",
+        "print(f\"y_train_extended: {y_train_extended.shape}\\n\")\n",
+        "\n",
+        "# Create new classifier\n",
+        "rf_classifier_updated = RandomForestClassifier(random_state=42, class_weight=\"balanced\")\n",
+        "rf_classifier_updated.fit(x_train_extended, y_train_extended)\n",
+        "\n",
+        "# Predictions in the initial train/test data\n",
+        "y_updated_pred_train = rf_classifier_balanced.predict(x_train)\n",
+        "y_updated_pred_test = rf_classifier_balanced.predict(x_test)\n",
+        "\n",
+        "# Calculate train desired scores\n",
+        "updated_train_desired_scores = calculate_scores(y_train, y_updated_pred_train)\n",
+        "\n",
+        "# Calculate test desired scores\n",
+        "updated_test_desired_scores = calculate_scores(y_test, y_updated_pred_test)\n",
+        "\n",
+        "# Print results (Train)\n",
+        "print(\"Updated train scores:\\n\")\n",
+        "for metric, value in updated_train_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n",
+        "\n",
+        "# Print results (Test)\n",
+        "print(\"\\nUpdated test scores:\\n\")\n",
+        "for metric, value in updated_test_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1KyRHnm4sNf",
+        "outputId": "5e59668a-2ca9-4daa-8081-e4acf1969ede"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sample added: 3847\n",
+            "\n",
+            "Previous training set shapes:\n",
+            "\n",
+            "x_train_extended: (1819, 12)\n",
+            "y_train_extended: (1819,)\n",
+            "\n",
+            "New training set shapes:\n",
+            "\n",
+            "x_train_extended: (5666, 12)\n",
+            "y_train_extended: (5666,)\n",
+            "\n",
+            "Updated train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Updated test scores:\n",
+            "\n",
+            "Accuracy score: 0.9949\n",
+            "Precision score: 0.9947\n",
+            "Recall score: 0.9844\n",
+            "F1 score: 0.9895\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Question 10"
@@ -1140,6 +1229,15 @@
       "metadata": {
         "id": "7yhqPb5Z9sJ7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7i2fp0gT6waf"
+      },
+      "execution_count": 51,
+      "outputs": []
     }
   ]
 }
