--- a/Exercise_four_(4).ipynb
+++ b/Exercise_four_(4).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1hOJcKc222iLBKezNNexr",
+      "authorship_tag": "ABX9TyMlrwG318YR2aWgKNzHYYVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 50,
       "metadata": {
         "id": "TQ969cqF3c3f"
       },
@@ -73,9 +73,9 @@
           "height": 412
         },
         "id": "3v_Xe2qq35Lu",
-        "outputId": "650fd110-477f-4f08-beef-dfef8413dca4"
+        "outputId": "063d7275-91ff-4b8e-d95d-4a55a01d23e2"
       },
-      "execution_count": 42,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3474727b-cad2-4a27-b695-d650e03d23e2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-139a2352-97cf-4d1f-ab4d-42e7e890cc09\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -339,7 +339,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3474727b-cad2-4a27-b695-d650e03d23e2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-139a2352-97cf-4d1f-ab4d-42e7e890cc09')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -391,12 +391,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3474727b-cad2-4a27-b695-d650e03d23e2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-139a2352-97cf-4d1f-ab4d-42e7e890cc09 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3474727b-cad2-4a27-b695-d650e03d23e2');\n",
+              "        const element = document.querySelector('#df-139a2352-97cf-4d1f-ab4d-42e7e890cc09');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -416,8 +416,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-09548d3f-b86a-446f-ba22-220f40c7c35d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-09548d3f-b86a-446f-ba22-220f40c7c35d')\"\n",
+              "    <div id=\"df-ea38d428-05ae-4658-b378-9daba4ccbead\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ea38d428-05ae-4658-b378-9daba4ccbead')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -536,7 +536,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-09548d3f-b86a-446f-ba22-220f40c7c35d button');\n",
+              "            document.querySelector('#df-ea38d428-05ae-4658-b378-9daba4ccbead button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -552,7 +552,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 51
         }
       ]
     },
@@ -591,9 +591,9 @@
           "height": 1000
         },
         "id": "wlDd_khT6ARx",
-        "outputId": "a6373f5b-bb90-47b6-9e6f-294819b3574c"
+        "outputId": "7f639b94-6c9e-4122-b5fd-161132004257"
       },
-      "execution_count": 43,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -752,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1z0L8x7F85zv",
-        "outputId": "c42dea8d-db45-4934-da36-aa11012eb0e7"
+        "outputId": "ccca4bb0-cd22-4d19-b5e0-eaf7424dcb54"
       },
-      "execution_count": 44,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +764,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 42
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((6497, 12), (6497,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
         }
       ]
     },
@@ -797,9 +807,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCKXZEmZEZIk",
-        "outputId": "dbdfc497-3ec9-4b58-b257-8dcc108c7bd7"
+        "outputId": "bc2db9ab-3628-4606-8358-6ce5bd4448cb"
       },
-      "execution_count": 45,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +819,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 43
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2599, 12), (2599,), (3898, 12))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
         }
       ]
     },
@@ -838,14 +858,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fOUellkhGkLV",
-        "outputId": "1fee527e-c462-4943-eb77-1774d7ed0c2e"
+        "outputId": "8538d813-f5ba-4cef-c28d-c75ed0e5e7fa"
       },
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "X train: (1819, 12)\n",
+            "X test: (780, 12)\n",
+            "Y train: (1819,)\n",
+            "Y test: (780,)\n",
             "X train: (1819, 12)\n",
             "X test: (780, 12)\n",
             "Y train: (1819,)\n",
@@ -903,14 +927,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YN_vUUc6MjI6",
-        "outputId": "9d74b9ea-e58b-4871-feee-277eb57a90d9"
+        "outputId": "cc7450a6-4730-47e1-8e07-cb1340b6ff8b"
       },
-      "execution_count": 47,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Test scores:\n",
+            "\n",
+            "Accuracy score: 0.9987\n",
+            "Precision score: 0.9948\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9974\n",
             "Train scores:\n",
             "\n",
             "Accuracy score: 0.9995\n",
@@ -978,14 +1015,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ij_dBerFTN63",
-        "outputId": "54f16fb2-2f6c-4106-d611-e43767b79811"
+        "outputId": "1e8a29b1-0573-4ca7-9517-7935b0afc1c5"
       },
-      "execution_count": 48,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Test scores:\n",
+            "\n",
+            "Accuracy score: 0.9949\n",
+            "Precision score: 0.9947\n",
+            "Recall score: 0.9844\n",
+            "F1 score: 0.9895\n",
             "Train scores:\n",
             "\n",
             "Accuracy score: 0.9995\n",
@@ -1043,9 +1093,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsLP98PfVbie",
-        "outputId": "72ef60ba-6409-4bd1-e8d0-1900be624a39"
+        "outputId": "6caad104-9915-4628-dcc1-d404c078fdb2"
       },
-      "execution_count": 49,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1111,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 47
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.  , 0.  ],\n",
+              "       [1.  , 0.  ],\n",
+              "       [1.  , 0.  ],\n",
+              "       ...,\n",
+              "       [0.01, 0.99],\n",
+              "       [0.01, 0.99],\n",
+              "       [0.01, 0.99]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
     },
@@ -1102,14 +1168,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U0_UqVq907x9",
-        "outputId": "53806f9d-a4cf-4a53-dbc4-445ae8acbd2f"
+        "outputId": "de13937f-f8cf-48c7-9d9f-8a4a464911d3"
       },
-      "execution_count": 50,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Predicted labels for x_unknown:\n",
+            "\n",
+            "[['white']\n",
+            " ['white']\n",
+            " ['white']\n",
+            " ...\n",
+            " ['red']\n",
+            " ['red']\n",
+            " ['red']]\n",
             "Predicted labels for x_unknown:\n",
             "\n",
             "[['white']\n",
@@ -1184,14 +1259,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W1KyRHnm4sNf",
-        "outputId": "5e59668a-2ca9-4daa-8081-e4acf1969ede"
+        "outputId": "6a6ac4a2-311f-4d69-9aab-b19c31237625"
       },
-      "execution_count": 51,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Sample added: 3847\n",
+            "\n",
+            "Previous training set shapes:\n",
+            "\n",
+            "x_train_extended: (1819, 12)\n",
+            "y_train_extended: (1819,)\n",
+            "\n",
+            "New training set shapes:\n",
+            "\n",
+            "x_train_extended: (5666, 12)\n",
+            "y_train_extended: (5666,)\n",
+            "\n",
+            "Updated train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Updated test scores:\n",
+            "\n",
+            "Accuracy score: 0.9949\n",
+            "Precision score: 0.9947\n",
+            "Recall score: 0.9844\n",
+            "F1 score: 0.9895\n",
             "Sample added: 3847\n",
             "\n",
             "Previous training set shapes:\n",
@@ -1232,12 +1332,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing_extensions import final\n",
+        "POS_THRESHOLD = 0.65   # over this -> 'red'\n",
+        "NEG_THRESHOLD = 0.35   # lower this -> 'white'\n",
+        "MAX_ITER = 10          # Max iterations\n",
+        "\n",
+        "x_train_final = x_train.copy()\n",
+        "x_test_final = x_test.copy()\n",
+        "y_train_final = y_train.copy()\n",
+        "y_test_final = y_test.copy()\n",
+        "x_unknown_final = x_unknown.copy()\n",
+        "\n",
+        "# Create random forest classifier\n",
+        "rf_final = RandomForestClassifier(random_state=42, class_weight='balanced')\n",
+        "rf_final.fit(x_train_final, y_train_final)\n",
+        "\n",
+        "\n",
+        "for i in range(MAX_ITER):\n",
+        "\n",
+        "  # Calculate probability for unknown\n",
+        "  # Proba is an array with shape (n_sample, 2), we have 2 classes, white=0 / red=1\n",
+        "  # proba[i, 0] -> probability of sample i to be white\n",
+        "  # proba[i, 1] -> probability of sample i to be red\n",
+        "  proba = rf_final.predict_proba(x_unknown_final)\n",
+        "  # Get probability to be red\n",
+        "  # For every sample we keep the probability to be red (n_samples,)\n",
+        "  proba_red = proba[:, 1]\n",
+        "\n",
+        "  # Create a boolean mask that includes samples with \"sure\" prediction\n",
+        "  # True -> Sample can be added in training set with pseudo label\n",
+        "  # False -> Sample is uncertain, will stay for the next iteration\n",
+        "  mask_add = (proba_red > POS_THRESHOLD) | (proba_red < NEG_THRESHOLD)\n",
+        "  if not np.any(mask_add):\n",
+        "      print(f\"\\nStopped at iteration {i}: no confident predictions.\\n\")\n",
+        "      break\n",
+        "\n",
+        "  # Update x_new_final and y_new_final sets according to mask_add results\n",
+        "  # From x_unknown_final set is going to be kept only those that are \"sure\" (inside mask_add -> True)\n",
+        "  x_new_final = x_unknown_final[mask_add]\n",
+        "  y_new_final = np.where(proba_red[mask_add] > POS_THRESHOLD, 1, 0)\n",
+        "\n",
+        "  # Update sets\n",
+        "  x_train_final = np.concatenate([x_train_final, x_new_final])\n",
+        "  y_train_final = np.concatenate([y_train_final, y_new_final])\n",
+        "\n",
+        "  # Remove new samples from unknown set\n",
+        "  # Keep only samples with value False\n",
+        "  # So, keep only the samples taht should not be in the training set yet\n",
+        "  x_unknown_final = x_unknown_final[~mask_add]\n",
+        "\n",
+        "  rf_final.fit(x_train_final, y_train_final)\n",
+        "  print(f\"Iter {i+1}: added {len(y_new_final)} samples, remaining unknown {len(x_unknown_final)}\")\n",
+        "\n",
+        "# Final evaluation\n",
+        "y_pred_train_final = rf_final.predict(x_train_final)\n",
+        "y_pred_test_final = rf_final.predict(x_test_final)\n",
+        "\n",
+        "final_train_desired_scores = calculate_scores(y_train_final, y_pred_train_final)\n",
+        "final_test_desired_scores = calculate_scores(y_test_final, y_pred_test_final)\n",
+        "\n",
+        "# Print results (Train)\n",
+        "print(\"Final train scores:\\n\")\n",
+        "for metric, value in final_train_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n",
+        "\n",
+        "# Print results (Test)\n",
+        "print(\"\\nFinal test scores:\\n\")\n",
+        "for metric, value in final_test_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n"
+      ],
       "metadata": {
-        "id": "7i2fp0gT6waf"
+        "id": "7i2fp0gT6waf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c09a7dfa-d24a-4026-da1b-9acdcb776676"
       },
-      "execution_count": 51,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iter 1: added 3847 samples, remaining unknown 51\n",
+            "Iter 2: added 23 samples, remaining unknown 28\n",
+            "Iter 3: added 2 samples, remaining unknown 26\n",
+            "Iter 4: added 5 samples, remaining unknown 21\n",
+            "Iter 5: added 1 samples, remaining unknown 20\n",
+            "\n",
+            "Stopped at iteration 5: no confident predictions.\n",
+            "\n",
+            "Final train scores:\n",
+            "\n",
+            "Accuracy score: 0.9998\n",
+            "Precision score: 0.9993\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9996\n",
+            "\n",
+            "Final test scores:\n",
+            "\n",
+            "Accuracy score: 0.9962\n",
+            "Precision score: 0.9948\n",
+            "Recall score: 0.9896\n",
+            "F1 score: 0.9922\n"
+          ]
+        }
+      ]
     }
   ]
 }
