--- a/Exercise_five_(5).ipynb
+++ b/Exercise_five_(5).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr9uOugrKqWenqWaQnmABl",
+      "authorship_tag": "ABX9TyN7hgR3SVqyzugrfgSkkmJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "h8RO7y4tduQp"
       },
@@ -73,7 +73,7 @@
         "id": "ybR2fDaRd7Ea",
         "outputId": "568755b8-c513-4971-98b3-d2ae8edad88f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "id": "OD9SKFBSeE_M",
         "outputId": "aac39119-2b8f-41ef-b5ad-71679676109b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -196,7 +196,7 @@
         "id": "EM0rHRkkgT7n",
         "outputId": "df6d56aa-5864-415d-a199-73baffe1636a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +284,7 @@
         "id": "ocrsQ0RZgtfO",
         "outputId": "da88fe13-c543-48cf-e48d-71a4155f2e28"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,13 +342,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 695
+          "base_uri": "https://localhost:8080/"
         },
         "id": "aCDgHo_ynjUt",
         "outputId": "5d157d65-eb03-491f-dcca-f69129690ae3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,6 +378,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Μετά την κανονικοποίηση των pixel τιμών στο διάστημα [0, 1] και την επανάληψη του πειράματος, οι ακρίβειες των ταξινομητών KNN παρέμειναν ακριβώς οι ίδιες. Αυτό συμβαίνει επειδή η κανονικοποίηση κλιμακώνει όλες τις αποστάσεις κατά τον ίδιο παράγοντα (1/255), χωρίς να αλλάζει τη σειρά των κοντινότερων γειτόνων. Άρα ο KNN πραγματοποιεί τις ίδιες προβλέψεις."
+      ],
+      "metadata": {
+        "id": "dcww328hpaL_"
+      }
     }
   ]
 }
